--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "ts-node index.ts"
+    "start": "ts-node ./index.ts",
+    "test": "DEBUG=\"t:*\" jest --detectOpenHandles"
   },
   "repository": {
     "type": "git",
@@ -17,13 +18,42 @@
   },
   "homepage": "https://github.com/hYe0kjUn/nodeStock#readme",
   "dependencies": {
+    "@types/config": "0.0.38",
+    "@types/jest": "^26.0.20",
+    "@types/mocha": "^8.2.0",
+    "@types/moment": "^2.13.0",
+    "@types/node-cron": "^2.0.3",
+    "@types/request": "^2.48.5",
+    "@types/request-promise": "^4.1.47",
+    "config": "^3.3.3",
+    "jest": "^26.6.3",
+    "moment": "^2.29.1",
+    "node-cron": "^2.0.3",
     "node-gyp": "^7.1.2",
     "nodemon": "^2.0.7",
     "request": "^2.88.2",
+    "request-promise": "^4.2.6",
+    "ts-jest": "^26.5.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
-    "@types/node": "^14.14.22"
+    "@types/node": "^14.14.22",
+    "mocha": "^8.2.1"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "testRegex": "\\.test\\.ts$",
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "globals": {
+      "ts-jest": {
+        "enableTsDiagnostics": true
+      }
+    }
   }
 }
