--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node ./index.ts",
+    "start:prod": "node ./build/index.js",
+    "build": "tsc --build",
     "test": "DEBUG=\"t:*\" jest --detectOpenHandles"
   },
   "repository": {
