--- a/package.json
+++ b/package.json
@@ -21,18 +21,22 @@
   "homepage": "https://github.com/hYe0kjUn/nodeStock#readme",
   "dependencies": {
     "@types/config": "0.0.38",
+    "@types/ioredis": "^4.22.0",
     "@types/jest": "^26.0.20",
     "@types/mocha": "^8.2.0",
     "@types/moment": "^2.13.0",
     "@types/node-cron": "^2.0.3",
+    "@types/redis": "^2.8.28",
     "@types/request": "^2.48.5",
     "@types/request-promise": "^4.1.47",
     "config": "^3.3.3",
+    "ioredis": "^4.23.0",
     "jest": "^26.6.3",
     "moment": "^2.29.1",
     "node-cron": "^2.0.3",
     "node-gyp": "^7.1.2",
     "nodemon": "^2.0.7",
+    "redis": "^3.0.2",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "ts-jest": "^26.5.0",
