feat: change bithumb api

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start:ts": "ts-node",
     "start": "ts-node ./index.ts",
     "start:prod": "node ./build/index.js",
     "build": "tsc --build",
@@ -33,9 +34,11 @@
     "ioredis": "^4.23.0",
     "jest": "^26.6.3",
     "moment": "^2.29.1",
+    "node-bithumb": "^1.0.6",
     "node-cron": "^2.0.3",
     "node-gyp": "^7.1.2",
     "nodemon": "^2.0.7",
+    "query-string": "^7.0.1",
     "redis": "^3.1.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
