--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:ts": "ts-node",
+    "sbin": "ts-node",
     "start": "ts-node ./index.ts",
     "start:prod": "node ./build/index.js",
     "build": "tsc --build",
@@ -31,14 +31,13 @@
     "@types/request": "^2.48.5",
     "@types/request-promise": "^4.1.47",
     "config": "^3.3.3",
+    "dayjs": "^1.10.7",
     "ioredis": "^4.23.0",
     "jest": "^26.6.3",
     "moment": "^2.29.1",
-    "node-bithumb": "^1.0.6",
-    "node-cron": "^2.0.3",
+    "node-bithumb": "^2.0.0",
     "node-gyp": "^7.1.2",
     "nodemon": "^2.0.7",
-    "query-string": "^7.0.1",
     "redis": "^3.1.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
