--- a/package.json
+++ b/package.json
@@ -21,33 +21,29 @@
   },
   "homepage": "https://github.com/hYe0kjUn/nodeStock#readme",
   "dependencies": {
-    "@types/config": "0.0.38",
-    "@types/ioredis": "^4.22.0",
-    "@types/jest": "^26.0.20",
-    "@types/mocha": "^8.2.0",
+    "@types/config": "0.0.41",
+    "@types/ioredis": "^4.28.7",
+    "@types/jest": "^27.4.0",
+    "@types/mocha": "^9.0.0",
     "@types/moment": "^2.13.0",
-    "@types/node-cron": "^2.0.3",
-    "@types/redis": "^2.8.28",
-    "@types/request": "^2.48.5",
-    "@types/request-promise": "^4.1.47",
-    "config": "^3.3.3",
+    "@types/node-cron": "^3.0.1",
+    "@types/redis": "^4.0.10",
+    "@types/request": "^2.48.8",
+    "@types/request-promise": "^4.1.48",
+    "config": "^3.3.7",
     "dayjs": "^1.10.7",
-    "ioredis": "^4.23.0",
-    "jest": "^26.6.3",
+    "ioredis": "^4.28.3",
+    "jest": "^27.4.7",
     "moment": "^2.29.1",
-    "node-bithumb": "^2.0.0",
-    "node-gyp": "^7.1.2",
-    "nodemon": "^2.0.7",
-    "redis": "^3.1.1",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6",
-    "ts-jest": "^26.5.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "node-bithumb": "^2.0.3",
+    "node-gyp": "^8.4.1",
+    "nodemon": "^2.0.15",
+    "redis": "^4.0.2"
   },
   "devDependencies": {
-    "@types/node": "^14.14.22",
-    "mocha": "^8.2.1"
+    "@types/node": "^17.0.10",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   },
   "jest": {
     "transform": {
